--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,6 +20,10 @@ const { title } = Astro.props;
 	</body>
 </html>
 <style is:global>
+	*{
+		box-sizing: border-box;
+		outline: transparent;
+	}
 	html {
 		font-family: system-ui, sans-serif;
 		background-color: #F6F6F6;
