--- a/src/pages/producto/empalme/[code].astro
+++ b/src/pages/producto/empalme/[code].astro
@@ -1,7 +1,7 @@
 ---
 import TitleBar from "../../../components/TitleBar.astro";
 import Layout from "../../../layouts/Layout.astro";
-import { readProducts } from "../../../util/server";
+import { readProducts } from "../../../util/provider";
 
 const code = Astro.params.code;
 
