--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,16 +2,19 @@
 import TitleBar from "../components/TitleBar.astro";
 import Layout from "../layouts/Layout.astro";
 import { transformFilters } from "../util/filters";
-import { readProductsTransformed, readFilters } from "../util/provider";
-import Questions from "../components/Questions";
-
+import { readProductsTransformed, readFilters, readQuestions } from "../util/provider";
+// import Questions from "../components/Questions";
 // export const prerender = true
+
+import yaml from "yaml";
 
 const products = await readProductsTransformed();
 const filters = transformFilters(await readFilters());
+console.log(await readQuestions())
+
 ---
 
 <Layout title="Welcome to Astro.">
 	<TitleBar />
-	<Questions filters={filters} products={products} client:load />
+	<!-- <Questions filters={filters} products={products} client:load /> -->
 </Layout>
