--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,4 +32,10 @@ const { title } = Astro.props;
 		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
 			Bitstream Vera Sans Mono, Courier New, monospace;
 	}
+
+	.container {
+		margin: 0 auto;
+		object-position: center;
+		padding: 0 22.5px;
+	}
 </style>
