--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,19 +1,15 @@
 ---
-import TitleBar from "../components/TitleBar.astro";
 import Layout from "../layouts/Layout.astro";
-import { readProductsTransformed, readFilters, readQuestions } from "../util/provider";
-// import Questions from "../components/Questions";
+import { readProductsTransformed, readQuestions } from "../util/provider";
+import { Questions } from "../components/Questions";
 // export const prerender = true
 
-import yaml from "yaml";
-
+const questions = await readQuestions();
 const products = await readProductsTransformed();
-const filters = transformFilters(await readFilters());
-console.log(await readQuestions())
 
+const url = Astro.url;
 ---
 
 <Layout title="Welcome to Astro.">
-	<TitleBar />
-	<!-- <Questions filters={filters} products={products} client:load /> -->
+	<Questions filters={questions} products={products} initialUrl={url} client:load />
 </Layout>
