--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
+import { QuestionsView } from "../components/QuestionsView";
 import Layout from "../layouts/Layout.astro";
 import { readProductsTransformed, readQuestions } from "../util/provider";
-import { Questions } from "../components/Questions";
 // export const prerender = true
 
 const questions = await readQuestions();
@@ -11,5 +11,5 @@ const url = Astro.url;
 ---
 
 <Layout title="Guía de Selección">
-	<Questions filters={questions} products={products} initialUrl={url} client:load />
+	<QuestionsView filters={questions} products={products} initialUrl={url} client:load />
 </Layout>
