--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import { QuestionsView } from "../components/QuestionsView";
+import QuestionsView from "../components/QuestionsView";
 import Layout from "../layouts/Layout.astro";
 import { readProductsTransformed, readQuestions } from "../util/provider";
 // export const prerender = true
@@ -11,5 +11,10 @@ const url = Astro.url;
 ---
 
 <Layout title="Guía de Selección">
-	<QuestionsView filters={questions} products={products} initialUrl={url} client:load />
+	<QuestionsView
+		filters={questions}
+		products={products}
+		initialUrl={url}
+		client:load
+	/>
 </Layout>
