--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -64,3 +64,13 @@ const { title } = Astro.props;
 		scrollbar-width: none; /* Firefox */
 	}
 </style>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7TQ2M3K95M"></script>
+<script lang="js">
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7TQ2M3K95M');
+</script>
