--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ const products = await readProductsTransformed();
 const url = Astro.url;
 ---
 
-<Layout title="Guía de Selección">
+<Layout title="Accesorios para cables subterráneos">
 	<QuestionsView
 		filters={questions}
 		products={products}
